# SEL-PW2

./: README.txt  pyproject.toml  run_experiments.py  run_tests.py  tests.py
output/: DecisionForest-heart-feature-relevance.pkl  DecisionForest-heart-feature-relevance.tex  DecisionForest-heart-feature-relevance.txt  DecisionForest-heart-results.pkl  DecisionForest-heart-results.tex  DecisionForest-iris-feature-relevance.pkl  DecisionForest-iris-feature-relevance.tex  DecisionForest-iris-feature-relevance.txt  DecisionForest-iris-results.pkl  DecisionForest-iris-results.tex  DecisionForest-nursery-feature-relevance.pkl  DecisionForest-nursery-feature-relevance.tex  DecisionForest-nursery-feature-relevance.txt  DecisionForest-nursery-results.pkl  DecisionForest-nursery-results.tex  RandomForest-heart-feature-relevance.pkl  RandomForest-heart-feature-relevance.tex  RandomForest-heart-feature-relevance.txt  RandomForest-heart-results.pkl  RandomForest-heart-results.tex  RandomForest-iris-feature-relevance.pkl  RandomForest-iris-feature-relevance.tex  RandomForest-iris-feature-relevance.txt  RandomForest-iris-results.pkl  RandomForest-iris-results.tex  RandomForest-nursery-feature-relevance.pkl  RandomForest-nursery-feature-relevance.tex  RandomForest-nursery-feature-relevance.txt  RandomForest-nursery-results.pkl  RandomForest-nursery-results.tex
source/: classifiers.py  forest.py
src/: classifiers.py  datasets.py  forest.py
